--- a/views/admin-dashboard.html
+++ b/views/admin-dashboard.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% block pageWrapper %}
-	<div id="title" style='display:none;'>
+	<div id="toolbar" style='display:none;'>
+        <div class="header">Semester Belaku: {{semester}}</div>
+    </div>
+
+    <div id="title" style='display:none;'>
 		<div class="header">Dashboard</div>
-	</div>	
- 	
+	</div>
+
 {% endblock %}
 
 {% block script %}
