--- a/views/dosen-list-penugasan.html
+++ b/views/dosen-list-penugasan.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block pageWrapper %}
-	<div id="title" style='display:none;'>
+    <div id="toolbar" style='display:none;'>
+        <div class="header">Semester Belaku: {{semester}}</div>
+    </div>	<div id="title" style='display:none;'>
 		<div class="header">Penugasan Dosen</div>
-	</div>	
- 	
+	</div>
+
 {% endblock %}
 
 {% block script %}
