--- a/views/mahasiswa-list-history-pend.html
+++ b/views/mahasiswa-list-history-pend.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% block pageWrapper %}
+    <div id="toolbar" style='display:none;'>
+        <div class="header">Semester Belaku: {{semester}}</div>
+    </div>
 	<div id="title" style='display:none;'>
 		<div class="header">Riwayat Pendidikan</div>
-	</div>	
- 	
+	</div>
+
 {% endblock %}
 
 {% block script %}
