--- a/views/tools-index.html
+++ b/views/tools-index.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block pageWrapper %}
+    <div id="toolbar" style='display:none;'>
+        <div class="header">Semester Belaku: {{semester}}</div>
+    </div>
 	<div id="title" style='display:none;'>
 		<div class="header">Tools</div>
 	</div>
