--- a/views/tools-trakm.html
+++ b/views/tools-trakm.html
@@ -4,14 +4,14 @@
         <div class="header">Semester Belaku: {{semester}}</div>
     </div>
 	<div id="title" style='display:none;'>
-		<div class="header">Add Kelas Kuliah</div>
+		<div class="header">Hitung Aktifitas Kuliah Mahasiswa</div>
 	</div>
 
 {% endblock %}
 
 {% block script %}
     <script type="text/javascript">
-	    require(["views/kuliah_add_kelas"], function(app){
+	    require(["views/tools_trakm"], function(app){
 	    	app.ui();
 	    	app.onInit();
 	    });
