--- a/views/mhs/mhs-profile.html
+++ b/views/mhs/mhs-profile.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block pageWrapper %}
-	<link rel="stylesheet" type="text/css" href="{{'assets/bootstrap/css/bootstrap.min.css'|base_uri}}" charset="utf-8">
-
+    <link rel="stylesheet" type="text/css" href="{{'assets/plugins/bootstrap-css-only/css/bootstrap.min.css'|base_uri}}" charset="utf-8">
 	<div id="title"  style='display:none;'>
 		<div class='header'>
 			Profile Mahasiswa
@@ -11,10 +10,10 @@
 
 	<div id="profile" style='display:none;'>
 		<div class="row">
-			<div class="col-md-3" align="center"> 
-				<img alt="User Pic" class="img-thumbnail" src="{{'assets/imgs/mhs_photo/#NIMHSMSMHS#.jpg'|base_uri}}"> 
+			<div class="col-md-3" align="center">
+				<img alt="User Pic" class="img-thumbnail" src="{{'assets/imgs/mhs_photo/#NIMHSMSMHS#.jpg'|base_uri}}">
 			</div>
-			<div class=" col-md-9"> 
+			<div class=" col-md-9">
 				<table class="table table-condensed">
 					<tbody>
 						<tr>
@@ -23,7 +22,7 @@
 						</tr>
 						<tr>
 							<td>Nim</td>
-							<td>#NIMHSMSMHS#</td>
+							<td>#nipd#</td>
 						</tr>
 						<tr>
 							<td>Jen.Kelamin</td>
